--- a/JSWeb-exams/Real-Estate-Agency/views/details.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/details.hbs
@@ -25,28 +25,31 @@
           </div>
 
           <!-- if there is no registered user, do not display buttons-->
-          <div class='product-btn'>
-            {{#if loggedOwner}}
+          {{#if loggedUser}}
+            <div class='product-btn'>
               <!-- Only for registered user and creator of the housing offer-->
-              <a href='#' class='edit'>Edit</a>
-              <a href='#' class='remove'>Delete</a>
-            {{else}}
-              <!-- logged in user with available pieces-->
-              {{#if notRented}}
-                <a href='/site/{{_id}}/details/rent' class='rentHome'>Rent a
-                  home, available
-                  {{availablePieces}}
-                  housing</a>
+              {{#if isOwner}}
+                <a href='#' class='edit'>Edit</a>
+                <a href='#' class='remove'>Delete</a>
+              {{else}}
+                <!-- logged in user with available pieces-->
+                {{#unless noPieces}}
+                  {{#if notRented}}
+                    <a href='/site/{{_id}}/details/rent' class='rentHome'>Rent a
+                      home, available
+                      {{availablePieces}}
+                      housing</a>
+                  {{else}}
+                    <p class='alRentHome'>You have already rent this home</p>
+                  {{/if}}
+                  <!-- logged in user with no available pieces-->
+                {{/unless}}
+                {{#if noPieces}}
+                  <p class='no-housing'>No Housing Available!</p>
+                {{/if}}
               {{/if}}
-              {{#if hasRented}}
-                <p class='alRentHome'>You have already rent this home</p>
-              {{/if}}
-              <!-- logged in user with no available pieces-->
-              {{#if noPieces}}
-                <p class='no-housing'>No Housing Available!</p>
-              {{/if}}
-            {{/if}}
-          </div>
+            </div>
+          {{/if}}
         </div>
       </div>
     </section>
