implemented home page top houses sort

--- a/JSWeb-exams/Real-Estate-Agency/views/home.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/home.hbs
@@ -10,11 +10,11 @@
 </section>
 
 <section id='top-houses'>
-  {{#if housings}}
+  {{#if topHouses}}
   <h1>Top Houses</h1>
   <div class='houses'>
 
-  {{#each housings}}
+  {{#each topHouses}}
    {{> homeCard}}
   {{/each}}
     {{else}}
