Implemented delete functionality

--- a/JSWeb-exams/Real-Estate-Agency/views/details.hbs
+++ b/JSWeb-exams/Real-Estate-Agency/views/details.hbs
@@ -31,8 +31,8 @@
             <div class='product-btn'>
               <!-- Only for registered user and creator of the housing offer-->
               {{#if isOwner}}
-                <a href='#' class='edit'>Edit</a>
-                <a href='#' class='remove'>Delete</a>
+                <a href='/site/{{_id}}/details/edit' class='edit'>Edit</a>
+                <a href='/site/{{_id}}/details/delete' class='remove'>Delete</a>
               {{else}}
                 <!-- logged in user with available pieces-->
                 {{#unless noPieces}}
