--- a/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
+++ b/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
@@ -1,21 +1,45 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <title>Home Page</title>
+    <!-- Do not forget to change the path to the css file -->
+    <link href='/static/css/style.css' type='text/css' rel='stylesheet' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
-    {{#if errors}}
-      <div>
-        {{#each errors}}
-          <p>{{this}}</p>
-        {{/each}}
-      </div>
-    {{/if}}
-    {{{body}}}
+
+    <div id='box'>
+
+      <!-- In case of error, you should display div with class "error-box" -->
+      <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+      <!--<div class="error-box">
+            <p>Error</p>
+        </div>-->
+
+      <nav>
+
+        <!-- Do not forget to change the path to the image -->
+        <img alt='logo' />
+        <a href='#'>ArtGallery</a>
+
+        <ul class='menu'>
+          <li><a href='#'>Gallery</a></li>
+          <!-- Logged users -->
+          <li><a href='#'>Create Publication</a></li>
+          <li><a href='#'>Profile</a></li>
+          <li><a href='#'>Logout</a></li>
+          <!-- Guest users -->
+          <li><a href='#'>Login</a></li>
+          <li><a href='#'>Register</a></li>
+        </ul>
+
+      </nav>
+      {{{body}}}
+      <footer>
+        © Js Back-End Retake Exam 2021
+      </footer>
+    </div>
   </body>
+
 </html>
