--- a/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
+++ b/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
@@ -28,10 +28,10 @@
           <!-- Logged users -->
           <li><a href='#'>Create Publication</a></li>
           <li><a href='#'>Profile</a></li>
-          <li><a href='#'>Logout</a></li>
+          <li><a href='/auth/logout'>Logout</a></li>
           <!-- Guest users -->
-          <li><a href='#'>Login</a></li>
-          <li><a href='#'>Register</a></li>
+          <li><a href='/auth/login'>Login</a></li>
+          <li><a href='/auth/register'>Register</a></li>
         </ul>
 
       </nav>
