--- a/JSWeb-exams/Art-Gallery/views/login.hbs
+++ b/JSWeb-exams/Art-Gallery/views/login.hbs
@@ -1,6 +1,38 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+<main>
+  <section id='login-container'>
+
+    <div class='container'>
+      <!-- Do not forget to change the path to the image -->
+      <img src='/static/img/slider.jpg' alt='image' />
+
+      <form action='/auth/login' method='post' class='container-text'>
+        <h2>Login</h2>
+        <p>Welcome, see the new masterpieces!</p>
+
+        <label for='username'>Username:</label>
+        <input
+          type='text'
+          id='username'
+          placeholder='ivan_00'
+          name='username'
+        />
+
+        <label for='password'>Password:</label>
+        <input
+          type='password'
+          id='password'
+          placeholder='*****'
+          name='password'
+        />
+
+        <button class='login-btn'>Login</button>
+        <div class='card-no-account'>
+          <p>Don't have an account? <a href='/auth/register'>Sign up</a>.</p>
+        </div>
+
+      </form>
+    </div>
+
+  </section>
+
+</main>
