--- a/JSWeb-exams/Art-Gallery/views/register.hbs
+++ b/JSWeb-exams/Art-Gallery/views/register.hbs
@@ -1,7 +1,34 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+  <main>
+
+            <section id="register-container">
+                <div class="register-container-info">
+                    <!-- Do not forget to change the path to the image -->
+                    <img src="/static/img/slider.jpg" alt="image">
+
+                    <form action="#" method="" class="container-text">
+                        <h2>Register</h2>
+                        <p>Register to get ideas and view the latest masterpieces.</p>
+
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" placeholder="ivan_00" name="username">
+
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" placeholder="*****" name="password">
+
+                        <label for="re-password">Repeat password:</label>
+                        <input type="password" id="re-password" placeholder="*****" name="repass">
+
+                        <label for="address">Address:</label>
+                        <input type="text" id="address" placeholder="2572 Orphan Road" name="address">
+
+                        <button class="register-btn">Register</button>
+                        <div class="card-no-account">
+                            <p>Already have an account?<a href="/auth/login"> Sign in</p>
+                        </div>
+
+                    </form>
+                </div>
+
+            </section>
+
+        </main>
