fixed nav paths

--- a/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
+++ b/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
@@ -21,13 +21,13 @@
 
         <!-- Do not forget to change the path to the image -->
         <img alt='logo' />
-        <a href='#'>ArtGallery</a>
+        <a href='/'>ArtGallery</a>
 
         <ul class='menu'>
-          <li><a href='#'>Gallery</a></li>
+          <li><a href='/site/catalog'>Gallery</a></li>
           <!-- Logged users -->
-          <li><a href='#'>Create Publication</a></li>
-          <li><a href='#'>Profile</a></li>
+          <li><a href='/site/create'>Create Publication</a></li>
+          <li><a href='/site/profile'>Profile</a></li>
           <li><a href='/auth/logout'>Logout</a></li>
           <!-- Guest users -->
           <li><a href='/auth/login'>Login</a></li>
