--- a/JSWeb-exams/Art-Gallery/views/register.hbs
+++ b/JSWeb-exams/Art-Gallery/views/register.hbs
@@ -5,7 +5,7 @@
                     <!-- Do not forget to change the path to the image -->
                     <img src="/static/img/slider.jpg" alt="image">
 
-                    <form action="#" method="" class="container-text">
+                    <form action="/auth/register" method="post" class="container-text">
                         <h2>Register</h2>
                         <p>Register to get ideas and view the latest masterpieces.</p>
 
