--- a/JSWeb-exams/Art-Gallery/views/create.hbs
+++ b/JSWeb-exams/Art-Gallery/views/create.hbs
@@ -1,26 +1,50 @@
 <main>
-  <section id="create-container">
-    <div class="create-container-info">
+  <section id='create-container'>
+    <div class='create-container-info'>
       <!-- Do not forget to change the path to the image -->
-      <img src="./style/img/blog-img12.jpg" alt="image" />
+      <img src='/static/img/blog-img12.jpg' alt='image' />
 
-      <form action="/site/create" method="post" class="container-text">
+      <form action='/site/create' method='post' class='container-text'>
         <h2>Create Publication</h2>
         <p>Add your own masterpiece!</p>
 
-        <label for="title">Title:</label>
-        <input type="text" id="title" placeholder="Spring in the garden" name="title" value="" />
+        <label for='title'>Title:</label>
+        <input
+          type='text'
+          id='title'
+          placeholder='Spring in the garden'
+          name='title'
+          value='title'
+        />
 
-        <label for="painting-tech">Painting technique:</label>
-        <input type="text" id="painting-tech" placeholder="Oil paints" name="painting" value="" />
+        <label for='painting-tech'>Painting technique:</label>
+        <input
+          type='text'
+          id='painting-tech'
+          placeholder='Oil paints'
+          name='painting'
+          value=''
+        />
 
-        <label for="picture">Art picture:</label>
-        <input type="text" id="picture" placeholder="http://..." name="imageUrl" value="" />
+        <label for='picture'>Art picture:</label>
+        <input
+          type='text'
+          id='picture'
+          placeholder='http://...'
+          name='imageUrl'
+          value=''
+        />
 
-        <label for="certificate">Certificate of authenticity:</label>
-        <input type="text" id="certificate" placeholder="Yes" name="certificate" value="" />
+        <label for='certificate'>Certificate of authenticity:</label>
+        <input
+          type='text'
+          id='certificate'
+          placeholder='Yes'
+          name='certificate'
+          value=''
+        />
 
-        <button class="create-btn">Create</button>
+        <button class='create-btn'>Create</button>
       </form>
     </div>
   </section>
