--- a/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
+++ b/JSWeb-exams/Art-Gallery/views/layouts/main.hbs
@@ -13,9 +13,13 @@
 
       <!-- In case of error, you should display div with class "error-box" -->
       <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-      <!--<div class="error-box">
-            <p>Error</p>
-        </div>-->
+      {{#if errors}}
+        {{#each errors}}
+          <div class='error-box'>
+            <p>{{this}}</p>
+          </div>
+        {{/each}}
+      {{/if}}
 
       <nav>
 
