working create functionality

--- a/JSWeb-exams/Art-Gallery/views/create.hbs
+++ b/JSWeb-exams/Art-Gallery/views/create.hbs
@@ -14,7 +14,7 @@
           id='title'
           placeholder='Spring in the garden'
           name='title'
-          value='title'
+          value=''
         />
 
         <label for='painting-tech'>Painting technique:</label>
@@ -22,7 +22,7 @@
           type='text'
           id='painting-tech'
           placeholder='Oil paints'
-          name='painting'
+          name='technique'
           value=''
         />
 
