--- a/JSWeb-exams/Art-Gallery/views/partials/homeCard.hbs
+++ b/JSWeb-exams/Art-Gallery/views/partials/homeCard.hbs
@@ -1,6 +1,6 @@
 <article class='content-publication'>
   <h1>{{title}}</h1>
   <!--If no one has shared the post yet, the number should be zero -->
-  <p>Number of people shared the publication: {{shared}}</p>
+  <p>Number of people shared the publication: {{count}}</p>
   <a href='/site/{{_id}}details' class='image-details'>View publication</a>
 </article>
