--- a/JSWeb-exams/Art-Gallery/views/details.hbs
+++ b/JSWeb-exams/Art-Gallery/views/details.hbs
@@ -16,8 +16,11 @@
         {{#if username}}
           <div class='buttons'>
             <!-- Only for registered user and author of the publication -->
-            <a href='#' class='btn-edit'>Edit</a>
-            <a href='#' class='btn-delete'>Delete</a>
+            {{#if painting.owner}}
+              <a href='#' class='btn-edit'>Edit</a>
+              <a href='#' class='btn-delete'>Delete</a>
+            {{/if}}
+            
             <!-- logged in user who has not yet shared the publication-->
             <a href='#' class='btn-share'>Share publication</a>
             <!-- logged in user who has already shared the publication-->
