--- a/JSWeb-exams/Art-Gallery/views/details.hbs
+++ b/JSWeb-exams/Art-Gallery/views/details.hbs
@@ -20,12 +20,15 @@
               <a href='#' class='btn-edit'>Edit</a>
               <a href='#' class='btn-delete'>Delete</a>
             {{/if}}
-            
-            <!-- logged in user who has not yet shared the publication-->
-            <a href='#' class='btn-share'>Share publication</a>
-            <!-- logged in user who has already shared the publication-->
-            <p class='shared-pub'>You already shared this publication</p>
 
+            <!-- logged in user who has not yet shared the publication-->
+            {{#if painting.notShared}}
+              <a href='/site/{{painting._id}}/share' class='btn-share'>Share
+                publication</a>
+            {{else}}
+              <!-- logged in user who has already shared the publication-->
+              <p class='shared-pub'>You already shared this publication</p>
+            {{/if}}
           </div>
         {{/if}}
       </article>
