implemented user posts display on profile

--- a/JSWeb-exams/Art-Gallery/views/profile.hbs
+++ b/JSWeb-exams/Art-Gallery/views/profile.hbs
@@ -12,11 +12,12 @@
         <!--<h4>Titles of shared posts by the user: Not yet.</h4>-->
 
         <!--If the user has created their own publications, separate their titles with a comma and a space (, )-->
-        <h4>Titles of which the user is the author: Spring in the garden, Winter
-          is coming</h4>
-        <!--If not display:-->
-        <!--<h4>Titles of which the user is the author: Not yet.</h4>-->
-
+        {{#if user.createdPosts}}
+          <h4>Titles of which the user is the author: {{user.createdPosts}}</h4>
+          <!--If not display:-->
+        {{else}}
+          <!--<h4>Titles of which the user is the author: Not yet.</h4>-->
+        {{/if}}
       </article>
 
       <article class='profile-card-icon'>
