static home page implementation

--- a/JSWeb-exams/Charity-Christmas/views/home.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/home.hbs
@@ -1,1 +1,7 @@
-<h1>Home Page</h1>
+<section id='homePage' class='background-img'>
+  <div class='introduction'>
+    <h1>Welcome to our Charity Shops</h1>
+    <p>Our online charity shops sell christmas toys for future Christmas. All
+      money raised helps people in crisis in comunity and around the world.</p>
+  </div>
+</section>
