fixed view files

--- a/JSWeb-exams/Charity-Christmas/views/login.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/login.hbs
@@ -1,6 +1,10 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+
+        <section id="loginPage">
+            <form id='loginForm' action="#" method="">
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="" placeholder="Email">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="" placeholder="Password">
+                <input type="submit" class="register" value="Login">
+            </form>
+        </section>
