--- a/JSWeb-exams/Charity-Christmas/views/register.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/register.hbs
@@ -1,7 +1,13 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+ <section id="registerPage">
+            <form id='registerForm' action="#" method="">
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="" placeholder="Email">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="" placeholder="Enter your Username">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="" placeholder="Password">
+                <label for="rePassword">Repeat Password:</label>
+                <input type="password" id="rePassword" name="" placeholder="Repeat Password">
+                <input type="submit" class="register" value="Register">
+            </form>
+        </section>
