added login and register functionality

--- a/JSWeb-exams/Charity-Christmas/views/layouts/main.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/layouts/main.hbs
@@ -9,12 +9,15 @@
   <body>
     <!-- In case of error, you should display div with class "errorContainer" -->
     <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-
-    <!-- <div>
-        <div class="errorContainer">
-            <p>Error</p>
-        </div>
-    </div> -->
+    {{#if errors}}
+      <div>
+        {{#each errors}}
+          <div class='errorContainer'>
+            <p>{{this}}</p>
+          </div>
+        {{/each}}
+      </div>
+    {{/if}}
 
     <div id='container'>
 
@@ -23,13 +26,16 @@
           <!--For all users-->
           <li><a href='/'>Home</a></li>
           <li><a href='/site/catalog'>Catalog</a></li>
-          <!--For loggin users-->
-          <li><a href='/site/create'>Create Toy</a></li>
-          <li><a href='/site/search'>Search</a></li>
-          <li><a href='/auth/logout'>Logout</a></li>
-          <!--For guest user-->
-          <li><a href='/auth/login'>Login</a></li>
-          <li><a href='/auth/register'>Register</a></li>
+          {{#if email}}
+            <!--For loggin users-->
+            <li><a href='/site/create'>Create Toy</a></li>
+            <li><a href='/site/search'>Search</a></li>
+            <li><a href='/auth/logout'>Logout</a></li>
+          {{else}}
+            <!--For guest user-->
+            <li><a href='/auth/login'>Login</a></li>
+            <li><a href='/auth/register'>Register</a></li>
+          {{/if}}
 
         </ul>
 
