--- a/JSWeb-exams/Charity-Christmas/views/login.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/login.hbs
@@ -1,10 +1,10 @@
 
         <section id="loginPage">
-            <form id='loginForm' action="#" method="">
+            <form id='loginForm' action="/auth/login" method="post">
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="" placeholder="Email">
+                <input type="text" id="email" name="email" placeholder="Email">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="" placeholder="Password">
+                <input type="password" id="password" name="password" placeholder="Password">
                 <input type="submit" class="register" value="Login">
             </form>
         </section>
