--- a/JSWeb-exams/Charity-Christmas/views/register.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/register.hbs
@@ -1,13 +1,13 @@
  <section id="registerPage">
-            <form id='registerForm' action="#" method="">
+            <form id='registerForm' action="/auth/register" method="post">
                 <label for="email">Email:</label>
-                <input type="text" id="email" name="" placeholder="Email">
+                <input type="text" id="email" name="email" placeholder="Email">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="" placeholder="Enter your Username">
+                <input type="text" id="username" name="username" placeholder="Enter your Username">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="" placeholder="Password">
+                <input type="password" id="password" name="password" placeholder="Password">
                 <label for="rePassword">Repeat Password:</label>
-                <input type="password" id="rePassword" name="" placeholder="Repeat Password">
+                <input type="password" id="rePassword" name="repass" placeholder="Repeat Password">
                 <input type="submit" class="register" value="Register">
             </form>
         </section>
