--- a/JSWeb-exams/Charity-Christmas/views/create.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/create.hbs
@@ -1,19 +1,17 @@
-
-
-        <section id="createPage">
-            <form id='createForm' action="#" method="">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="" placeholder="Title...">
-                <label for="charity">For Charity:</label>
-                <input type="text" id="charity" name="" placeholder="For Charity...">
-                <label for="price">Price:</label>
-                <input type="number" id="price" name="" placeholder="Price...">
-                <label for="description">Description:</label>
-                <input type="text" id="description" name="" placeholder="Description...">
-                <label for="category">Category:</label>
-                <input type="text" id="description" name="" placeholder="Category...">
-                <label for="image">Image:</label>
-                <input type="text" id="image" name="" placeholder="Image...">
-                <input type="submit" class="create" value="Create Toy Offer">
-            </form>
-        </section>
+<section id='createPage'>
+    <form id='createForm' action='/site/create' method='post'>
+        <label for='title'>Title:</label>
+        <input type='text' id='title' name='title' placeholder='Title...' />
+        <label for='charity'>For Charity:</label>
+        <input type='text' id='charity' name='charity' placeholder='For Charity...' />
+        <label for='price'>Price:</label>
+        <input type='number' id='price' name='price' placeholder='Price...' />
+        <label for='description'>Description:</label>
+        <input type='text' id='description' name='description' placeholder='Description...' />
+        <label for='category'>Category:</label>
+        <input type='text' id='description' name='category' placeholder='Category...' />
+        <label for='image'>Image:</label>
+        <input type='text' id='image' name='imageUrl' placeholder='Image...' />
+        <input type='submit' class='create' value='Create Toy Offer' />
+    </form>
+</section>
