working catalog page

--- a/JSWeb-exams/Charity-Christmas/views/partials/toyCard.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/partials/toyCard.hbs
@@ -1,5 +1,5 @@
 <a href='/site/{{_id}}/details' class='added-toys-in-market'>
-  <img src='/static/image/picture3.jpg' class='picture-added-toys' />
+  <img src='{{imageUrl}}' class='picture-added-toys' />
   <h3>{{title}}</h3>
   <span>Price: ${{price}}</span>
 </a>
