working guest details

--- a/JSWeb-exams/Charity-Christmas/views/details.hbs
+++ b/JSWeb-exams/Charity-Christmas/views/details.hbs
@@ -1,25 +1,24 @@
-
-        <section id="detailsPage">
-            <div id="detailsInfo">
-                <h1>Title: Funny Christmas Tree</h1>
-                <div class="info"><img src="./image/picture3.jpg"></div>
-                <div class="info">
-                    <h3>CHARITY: Red Cross</h3>
-                    <h3>CATEGORY: Christmas Tree</h3>
-                    <h3>DESCRIPTION: Here we have funny and naughty Christmas tree she will be as remarkable new year's table decoration and funny toy.</h3>
-                    <h2>PRICE: $26.00</h2>
-                </div>
-                <!--If there is user logged in-->
-                <div class="buttons">
-                    <!--If user is not owner of the toy post-->
-                    <a href="#" class="buy-btn">Buy</a>
-                    <!--If user is owner-->
-                    <a href="#" class="edit-btn">Edit</a>
-                    <a href="#" class="delete-btn">Delete</a>
-                    <!--If user is not the owner and is bought this toy-->
-                    <p><span class="buy">Thank You For Your Purchase :)</span></p>
-                </div>
-            </div>
-        </section>
-
-  
+<section id='detailsPage'>
+  <div id='detailsInfo'>
+    <h1>Title:{{toy.title}}</h1>
+    <div class='info'><img src='{{toy.imageUrl}}' /></div>
+    <div class='info'>
+      <h3>CHARITY: {{toy.charity}}</h3>
+      <h3>CATEGORY: {{toy.category}}</h3>
+      <h3>DESCRIPTION: {{toy.description}}</h3>
+      <h2>PRICE: ${{toy.price}}</h2>
+    </div>
+    <!--If there is user logged in-->
+    {{#if email}}
+      <div class='buttons'>
+        <!--If user is not owner of the toy post-->
+        <a href='/site/buy' class='buy-btn'>Buy</a>
+        <!--If user is owner-->
+        <a href='/site/{{_id}}/edit' class='edit-btn'>Edit</a>
+        <a href='/site/{{_id}}/delete' class='delete-btn'>Delete</a>
+        <!--If user is not the owner and is bought this toy-->
+        <p><span class='buy'>Thank You For Your Purchase :)</span></p>
+      </div>
+    {{/if}}
+  </div>
+</section>
