--- a/JSWeb-exams/Booking-Uni/views/layouts/main.hbs
+++ b/JSWeb-exams/Booking-Uni/views/layouts/main.hbs
@@ -1,21 +1,33 @@
 <html lang='en'>
+
   <head>
     <meta charset='UTF-8' />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>{{title}}</title>
+    <title>BookingUni</title>
+    <link rel='stylesheet' href='../static/css/style.css' />
   </head>
+
   <body>
-    <a href='/auth/login'>Login</a>
-    <a href='/auth/register'>Register</a>
-    <a href='/auth/logout'>Logout</a>
-    {{#if errors}}
-      <div>
-        {{#each errors}}
-          <p>{{this}}</p>
-        {{/each}}
-      </div>
-    {{/if}}
-    {{{body}}}
+
+    <div id='container'>
+
+      <nav>
+        <div class='left-container'>
+          <ul>
+            <li><a href=''>Home</a></li>
+            <li><a href=''>Add +</a></li>
+          </ul>
+        </div>
+        <div class='right-container'>
+          <a href='' class='log-out'>{{name}}</a>
+          <a href='' class='log-out'>Logout</a>
+        </div>
+      </nav>
+
+      {{{body}}}
+
+      <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
+    </div>
+
   </body>
+
 </html>
