--- a/JSWeb-exams/Booking-Uni/views/register.hbs
+++ b/JSWeb-exams/Booking-Uni/views/register.hbs
@@ -21,7 +21,7 @@
     <input
       type='password'
       id='rePassword'
-      name='rePassword'
+      name='repass'
       placeholder='Repeat Password'
     />
     <input type='submit' class='register' value='Register' />
