--- a/JSWeb-exams/Booking-Uni/views/partials/hotelCard.hbs
+++ b/JSWeb-exams/Booking-Uni/views/partials/hotelCard.hbs
@@ -1,5 +1,5 @@
-<a href='' class='added-hotel'>
-  <img src='imageUrl' alt='image' class='picture-added-hotel' />
+<a href='/site/{{_id}}/details' class='added-hotel'>
+  <img src='{{imageUrl}}' alt='image' class='picture-added-hotel' />
   <h3>{{name}}</h3>
   <span>Free rooms: {{freeRooms}}</span>
 </a>
