dynamic details but static buttons

--- a/JSWeb-exams/Booking-Uni/views/details.hbs
+++ b/JSWeb-exams/Booking-Uni/views/details.hbs
@@ -6,15 +6,16 @@
     </div>
     <div class='hotel-right'>
       <div>
-        <h3>{{hotel.city}}</h3>
+        <h3>{{hotel.name}}</h3>
       </div>
       <div>
-        Auckland
+        {{hotel.city}}
       </div>
-      <p><span>Free rooms: 43</span> </p>
+      <p><span>Free rooms: {{hotel.freeRooms}}</span> </p>
       <p><span class='green'>You already have booked a room</span> </p>
 
       <a href='' class='book'>Book</a>
+      
       <a href='' class='edit'>Edit</a>
       <a href='' class='remove'>Delete</a>
     </div>
