--- a/JSWeb-exams/Booking-Uni/views/details.hbs
+++ b/JSWeb-exams/Booking-Uni/views/details.hbs
@@ -12,12 +12,18 @@
         {{hotel.city}}
       </div>
       <p><span>Free rooms: {{hotel.freeRooms}}</span> </p>
-      <p><span class='green'>You already have booked a room</span> </p>
+      {{#unless hotel.isOwner}}
+        {{#if hotel.isBooked}}
+          <p><span class='green'>You already have booked a room</span> </p>
+        {{else}}
+          <a href='' class='book'>Book</a>
+        {{/if}}
+      {{/unless}}
 
-      <a href='' class='book'>Book</a>
-      
-      <a href='' class='edit'>Edit</a>
-      <a href='' class='remove'>Delete</a>
+      {{#if hotel.isOwner}}
+        <a href='' class='edit'>Edit</a>
+        <a href='' class='remove'>Delete</a>
+      {{/if}}
     </div>
 
   </div>
