--- a/JSWeb-exams/Booking-Uni/views/details.hbs
+++ b/JSWeb-exams/Booking-Uni/views/details.hbs
@@ -16,7 +16,7 @@
         {{#if hotel.isBooked}}
           <p><span class='green'>You already have booked a room</span> </p>
         {{else}}
-          <a href='' class='book'>Book</a>
+          <a href='/site/{{hotel._id}}/book' class='book'>Book</a>
         {{/if}}
       {{/unless}}
 
