Implemented dynamic user profile

--- a/JSWeb-exams/Booking-Uni/views/layouts/main.hbs
+++ b/JSWeb-exams/Booking-Uni/views/layouts/main.hbs
@@ -1,4 +1,3 @@
-
 <html lang='en'>
 
   <head>
@@ -34,7 +33,7 @@
         </div>
         {{#if email}}
           <div class='right-container'>
-            <a href='/profile' class='log-out'>{{email}}</a>
+            <a href='/site/profile' class='log-out'>{{email}}</a>
             <a href='/auth/logout' class='log-out'>Logout</a>
           </div>
         {{/if}}
