--- a/JSWeb-exams/Booking-Uni/views/details.hbs
+++ b/JSWeb-exams/Booking-Uni/views/details.hbs
@@ -21,7 +21,7 @@
       {{/unless}}
 
       {{#if hotel.isOwner}}
-        <a href='' class='edit'>Edit</a>
+        <a href='/site/{{hotel._id}}/edit' class='edit'>Edit</a>
         <a href='' class='remove'>Delete</a>
       {{/if}}
     </div>
