--- a/JSWeb-exams/Booking-Uni/views/details.hbs
+++ b/JSWeb-exams/Booking-Uni/views/details.hbs
@@ -22,7 +22,7 @@
 
       {{#if hotel.isOwner}}
         <a href='/site/{{hotel._id}}/edit' class='edit'>Edit</a>
-        <a href='' class='remove'>Delete</a>
+        <a href='/site/{{hotel._id}}/delete' class='remove'>Delete</a>
       {{/if}}
     </div>
 
