created input with reference to change title

--- a/ANGULAR/Angular Components/angular-components/src/app/cars/cars.component.html
+++ b/ANGULAR/Angular Components/angular-components/src/app/cars/cars.component.html
@@ -4,6 +4,8 @@
   <ng-container *ngIf="!showPrice">Show</ng-container>
   Price
 </button>
+<input #titleInput type="text" />
+<button (click)="changeTitleHandler(titleInput.value)">Change title</button>
 <div id="container">
   <ul>
     <li *ngFor="let car of cars" class="list-item">
