--- a/ANGULAR/Angular Components/angular-components/src/app/cars/cars.component.html
+++ b/ANGULAR/Angular Components/angular-components/src/app/cars/cars.component.html
@@ -9,7 +9,7 @@
 <div id="container">
   <ul>
     <li *ngFor="let car of cars" class="list-item">
-      <app-list-item [car]="car" [showPrice]="showPrice"></app-list-item>
+      <app-list-item [car]="car" [showPrice]="showPrice" (customEvent)="customEventHandler($event)"></app-list-item>
     </li>
   </ul>
 </div>
