--- a/ANGULAR/Angular Components/angular-components/src/app/list-item/list-item.component.html
+++ b/ANGULAR/Angular Components/angular-components/src/app/list-item/list-item.component.html
@@ -1,2 +1,3 @@
 <span>{{ car.make }}</span>:
 <span *ngIf="showPrice">{{ car.price }}</span>
+<button (click)="selectClickHandler()">Test Button</button>
