created and added CarService to the main comp

--- a/ANGULAR/Angular Components/testing/angular-testing/src/app/car-detail/car-detail.component.html
+++ b/ANGULAR/Angular Components/testing/angular-testing/src/app/car-detail/car-detail.component.html
@@ -3,8 +3,8 @@
     <div>Model: {{ car.model }}</div>
     <div>id: {{ car.id }}</div>
     <div>
-      <label for="car-make">Hero name: </label>
-      <input id="car-make" [(ngModel)]="car.id" placeholder="make" />
+      <label for="car-make">Car model: </label>
+      <input id="car-make" [(ngModel)]="car.model" placeholder="make" />
     </div>
   </div>
   
