--- a/ANGULAR/Modules and Routing/routing/routing/src/app/core/header/header.component.html
+++ b/ANGULAR/Modules and Routing/routing/routing/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
 <h1>Test App</h1>
 <nav>
   <ul>
-    <li><a routerLink="users">User List</a></li>
+    <li><a routerLink="users/user-list">User List</a></li>
   </ul>
 </nav>
